--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 		</div>
 		<!-- <div class="row message">
-			<div class="col-md-12"><p>Khushbu</p></div>
+			<div class="col-md-12"><p>Neha</p></div>
 		</div> -->
 		<div class="row cake-cover">
 			<div class="col-md-12 texr-center">
