Updated banner image

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<img src="banner.png" class="bannar">
+				<img src="birthday-banner.png" class="bannar">
 			</div>
 		</div>
 		<!-- <div class="row message">
-			<div class="col-md-12"><p>Neha</p></div>
+			<div class="col-md-12"><p>Sayu</p></div>
 		</div> -->
 		<div class="row cake-cover">
 			<div class="col-md-12 texr-center">
